add role authorities to jwt authentication